# BrewControl

./: LICENSE  README.md
doc/: Overview.drawio
src/brew-control/: Cargo.toml
